--- a/app/src/main/res/layout/eat_list_item.xml
+++ b/app/src/main/res/layout/eat_list_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00000000">
+        android:background="#00000000"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
