--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:datePickerDialogTheme">@style/DatePickerDialogTheme</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -15,5 +16,31 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="DatePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:datePickerStyle">@style/DatePickerStyle</item>
+        <item name="android:buttonBarButtonStyle">@style/ButtonBarButtonStyle</item>
+    </style>
+
+    <style name="DatePickerStyle" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:headerBackground">@android:color/holo_blue_dark</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
+
+    <style name="ButtonBarButtonStyle"
+        parent="@android:style/Widget.Material.Button.Borderless.Colored">
+        <!-- Yellow -->
+        <item name="android:textColor">#ffffffff</item>
+        <item name="android:background">@android:color/holo_blue_dark</item>
+
+        <item name="android:minWidth">64dp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:minHeight">40dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginEnd">0dp</item>
+        <item name="android:layout_marginStart">4dp</item>
+
+    </style>
 
 </resources>
